5 Services and Networking/4 Use Ingress Rules to Expose Applications/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: web.app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
  - host: admin.app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port: 
              number: 9000
